--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "@doob9p/react-auto-scroll",
   "version": "0.0.1",
   "description": "",
-  "main": "lib/index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.es.js",
+  "browser": "./dist/index.umd.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
+    "install:peer": "npm i --legacy-peer-deps",
     "build": "rollup -c"
   },
   "keywords": [],
@@ -12,7 +16,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
-    "@babel/preset-flow": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@rollup/plugin-babel": "^6.0.3",
@@ -23,16 +26,15 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "postcss": "^8.4.19",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "rollup": "^3.5.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3"
   },
   "peerDependencies": {
-    "react": ">=18.2.0",
-    "react-dom": ">=18.2.0"
+    "react": ">=16",
+    "react-dom": ">=16"
   }
 }
