--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@doob9p/react-auto-scroll",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.es.js",
   "browser": "./dist/index.umd.js",
   "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "install:peer": "npm i --legacy-peer-deps",
     "build": "rollup -c"
